# company-salary-calculator

./: .gitignore  CHANGELOG.md  README.en.md  README.md  build-exe.ps1  index.html  package-lock.json  package.json  server.cjs  start-salary-tool.cmd  start.bat  启动薪资计算工具.bat
docs/superpowers/plans/: 2026-05-09-salary-analytics-implementation-plan.md
docs/superpowers/specs/: 2026-05-09-salary-analytics-design.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/db/: app-db.ts
src/features/app-shell/: AppShell.test.tsx  AppShell.tsx
src/features/compare/: ComparePage.test.tsx  ComparePage.tsx
src/features/dashboard/: DashboardPage.test.tsx  DashboardPage.tsx
src/features/data/: PayrollDataProvider.tsx  ScenarioProvider.tsx
src/features/entry/: EntryDashboardFlow.test.tsx  EntryPage.tsx
src/features/import/: ImportPage.tsx
src/features/settings/: SettingsPage.test.tsx  SettingsPage.tsx
src/fixtures/: salary-import-template.json
src/lib/: money.ts  tax-rules.ts
src/services/: crypto-service.test.ts  crypto-service.ts  excel-export-service.ts  excel-import-service.test.ts  excel-import-service.ts  payroll-record-service.test.ts  payroll-record-service.ts  pdf-export-service.ts  profile-service.ts  scenario-service.test.ts  scenario-service.ts
src/styles/: index.css
src/test/: setup.ts
src/types/: salary.ts
test-results/: .last-run.json
test-results/salary-dashboard-dashboard-and-compare-page-are-reachable/: error-context.md
tests/e2e/: salary-dashboard.spec.ts
(+15 files in other folders)
