[package]
name = "salary-analytics"
version = "1.0.0"
description = "岚图薪资分析工具"
authors = ["you"]
edition = "2021"

[lib]
name = "salary_analytics_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
